; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_getline.c_search_term.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_getline.c_search_term.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gl_search_mode = common dso_local global i64 0, align 8
@gl_buf = common dso_local global i64* null, align 8
@hist_last = common dso_local global i32 0, align 4
@hist_pos = common dso_local global i32 0, align 4
@gl_prompt = common dso_local global i32 0, align 4
@gl_pos = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @search_term to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @search_term() #0 {
  store i64 0, i64* @gl_search_mode, align 8
  %1 = load i64*, i64** @gl_buf, align 8
  %2 = getelementptr inbounds i64, i64* %1, i64 0
  %3 = load i64, i64* %2, align 8
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* @hist_last, align 4
  store i32 %6, i32* @hist_pos, align 4
  br label %7

7:                                                ; preds = %5, %0
  br i1 true, label %8, label %11

8:                                                ; preds = %7
  %9 = load i64*, i64** @gl_buf, align 8
  %10 = call i32 @gl_in_hook(i64* %9)
  br label %11

11:                                               ; preds = %8, %7
  %12 = load i32, i32* @gl_prompt, align 4
  %13 = load i32, i32* @gl_pos, align 4
  %14 = call i32 @gl_fixup(i32 %12, i32 0, i32 %13)
  ret void
}

declare dso_local i32 @gl_in_hook(i64*) #1

declare dso_local i32 @gl_fixup(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
